4장까지 드디어 마쳤다

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -22,15 +22,18 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  // 로그인창, 게임창 둘 다 안보이게
   .loginBox,
   .gameContainer {
     display: none;
   }
+  //body의 className이 loggedOut이면
   &.loggedOut {
     .loginBox {
       display: block;
     }
   }
+  //body의 className이 loggedIn이면
   &.loggedIn {
     .gameContainer {
       display: block;
