--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+// @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
 @import "variables";
 @import "reset";
+@import "login";
+@import "notifications";
 
 * {
   box-sizing: border-box;
@@ -16,7 +19,7 @@ html {
 
 body {
   background-color: $greyColor;
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Jua", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   justify-content: center;
