--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,4 +1,4 @@
-// @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
 @import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
 @import "variables";
 @import "reset";
@@ -6,40 +6,41 @@
 @import "notifications";
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 button:focus {
-  outline: none;
+    outline: none;
 }
 
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  background-color: $greyColor;
-  font-family: "Jua", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100%;
-  // 로그인창, 게임창 둘 다 안보이게
-  .loginBox,
-  .gameContainer {
-    display: none;
-  }
-  //body의 className이 loggedOut이면
-  &.loggedOut {
-    .loginBox {
-      display: block;
-    }
-  }
-  //body의 className이 loggedIn이면
-  &.loggedIn {
+    background-color: $greyColor;
+    font-family: "Jua", "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+    // 로그인창, 게임창 둘 다 안보이게
+    .loginBox,
     .gameContainer {
-      display: block;
+        display: none;
     }
-  }
+    //body의 className이 loggedOut이면
+    &.loggedOut {
+        .loginBox {
+            display: block;
+        }
+    }
+    //body의 className이 loggedIn이면
+    &.loggedIn {
+        .gameContainer {
+            display: block;
+        }
+    }
 }
