--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-html(lang="en")
+html(lang="ko")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel="stylesheet", href="styles/styles.css")
-        title Guess Mine
+        title Web_Telestrations
     body
         .loginBox
             form#jsLogin
@@ -13,6 +13,7 @@ html(lang="en")
         .gameContainer#jsGame
             h1 You are logged in
             div#jsNotifications
+            button Logout
         script.
             window.events = !{events}
         script(src="/socket.io/socket.io.js")
