--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -7,4 +7,6 @@ $green: rgb(76, 217, 100);
 $lightBlue: rgb(90, 200, 250);
 $darkBlue: rgb(0, 122, 255);
 $purple: rgb(88, 86, 214);
-$boxShadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+
+$boxShadow: 0 10px 10px rgba(50, 50, 93, 0.11),
+    20px 23px 20px rgba(0, 0, 0, 0.08);
