순욱 로직 적용

--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -19,3 +19,6 @@ mixin canvasContainer(turn = 1)
                     .color.jsColor(style="background-color:rgb(90,200,250)")
                     .color.jsColor(style="background-color:rgb(0,122,255)")
                     .color.jsColor(style="background-color:rgb(88,86,214)")
+        .canvas__btns
+            button.canvas__btn__draw 그리기 시작(테스트)
+            button.canvas__btn__ready 준비
