--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -73,4 +73,15 @@
             }
         }
     }
+    .canvas__btns {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 10%;
+        padding: 1rem;
+        button {
+            height: 100%;
+            width: 10rem;
+        }
+    }
 }
