--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -1,5 +1,4 @@
 .canvas__container {
-    background-color: chocolate;
     height: 100%;
     width: 70%;
     padding: 2rem;
@@ -10,6 +9,14 @@
         border-radius: 10px;
         box-shadow: 0 3px 36px rgba(23, 55, 87, 0.1),
             0 5px 15px rgba(0, 0, 0, 0.07);
+    }
+    .help__container {
+        width: 100%;
+        height: 90%;
+        background-color: white;
+        border-radius: 20px;
+        box-shadow: 0 6px 6px gray;
+        padding: 50px;
     }
     .main {
         display: flex;
@@ -80,8 +87,19 @@
         height: 10%;
         padding: 1rem;
         button {
+            background-color: orange;
+            border-color: orange;
+            border: none;
             height: 100%;
-            width: 10rem;
+            width: 20rem;
+            border-radius: 30px;
+            box-shadow: 0 5px 5px gray;
+            font-family: "Jua";
+            font-size: large;
+            transition: transform 0.1s linear;
+            &:active {
+                transform: scale(0.98);
+            }
         }
     }
 }
