--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-    background-color: $greyColor;
+    background-color: rgb(230, 230, 230) !important;
     font-family: "Jua", "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
         sans-serif;
@@ -33,7 +33,7 @@ body {
     align-items: center;
     min-height: 100%;
     .hidden {
-        display: none;
+        display: none !important;
     }
     background-color: $greyColor;
     font-family: "Jua", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
