--- a/src/views/mixins/chatContainer.pug
+++ b/src/views/mixins/chatContainer.pug
@@ -1,8 +1,14 @@
 mixin chatContainer()
     .chat__container
-        .chat__players__div players
+        .chat__players__div
+            .players
+                span 방장 
+                div 운
+            .players
+                span 
+                div 순
         .chat__list__div
             .chat__view__div
             form.chat__form
-                input(placeholder="chat here", type="text")
+                input(placeholder="메시지 입력", type="text")
         
