--- a/src/views/mixins/loginContainer.pug
+++ b/src/views/mixins/loginContainer.pug
@@ -1,5 +1,5 @@
 mixin loginContainer()
     .login__container
-        span.login__title Set Your Nickname
+        span.login__title 텔레스트레이션
         form.login__form
-            input(placeholder="Nickname", type="text")
+            input(placeholder="닉네임을 입력 해주세요", type="text")
