currMod 0인경우 프론트 작업

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,8 +10,8 @@ html(lang="ko")
         link(rel="stylesheet", href="styles/styles.css")
         title Web_Telestrations
     body
-        +loginContainer()
-        +mainContainer()
+        +loginContainer
+        +mainContainer
         button#jsSubmitButton 제출
         button#jsPrevButton 이전
         button#jsNextButton 다음
