--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -10,13 +10,72 @@
         box-shadow: 0 3px 36px rgba(23, 55, 87, 0.1),
             0 5px 15px rgba(0, 0, 0, 0.07);
     }
-    .help__container {
+    .container {
         width: 100%;
         height: 90%;
-        background-color: white;
         border-radius: 20px;
         box-shadow: 0 6px 6px gray;
         padding: 50px;
+        background-color: white;
+    }
+    .help__container {
+    }
+    .mod0__container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        span {
+            font-size: 1.5rem;
+        }
+        .word {
+            font-size: 2.5rem;
+        }
+        input {
+            text-align: center;
+            margin-top: 20px;
+            width: 20rem;
+            padding: 10px;
+            border-radius: 50px !important;
+            box-shadow: 0 2px 4px rgba(50, 50, 93, 0.1),
+                0 10px 10px rgba(81, 87, 110, 0.16) !important;
+            border-radius: 5px;
+            font-size: 14px;
+            border: rgb(209, 209, 209) 4px solid;
+            outline: none;
+            transition: all ease-in-out 0.3s;
+            &:focus::placeholder {
+                visibility: hidden;
+            }
+        }
+        .submitWord {
+            margin-top: 20px;
+        }
+    }
+    .mod1__container {
+        text-align: center;
+        .word {
+            font-size: 2rem;
+        }
+        .canvas__div {
+            margin-top: 2rem;
+            width: 100%;
+            height: 75%;
+            canvas {
+                height: 100%;
+                width: 100%;
+                border: 1px rgb(129, 129, 129) solid;
+                border-radius: 2rem;
+                box-shadow: inset 0 5px 5px gray;
+            }
+            .canvas__controls {
+                margin-top: 2rem;
+                .colors
+            }
+        }
+    }
+    .mod2__container {
+        background-color: rgb(44, 189, 68);
     }
     .main {
         display: flex;
