--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -1,28 +1,39 @@
-mixin canvasContainer(turn = 1)
+mixin canvasContainer
     .canvas__container
-        //- if turn%2
-        //-     span odd turn
-        //- else
-        //-     span even turn
-        .help__container
+        .container.help__container.hidden
             p 텔레스트레이션
             p 설명이 들어간다
             p 계속 들어간다
-        .main.hidden
-            #jsNotifs
-            canvas.canvas#jsCanvas
-            .controls#jsControls
-                button#jsMode Fill
-                .colors
-                    .color.jsColor(style="background-color:rgb(0, 0, 0)")
-                    .color.jsColor(style="background-color:rgb(255,255,255)")
-                    .color.jsColor(style="background-color:rgb(255,59,48)")
-                    .color.jsColor(style="background-color:rgb(255,149,0)")
-                    .color.jsColor(style="background-color:rgb(255,204,0)")
-                    .color.jsColor(style="background-color:rgb(76,217,100)")
-                    .color.jsColor(style="background-color:rgb(90,200,250)")
-                    .color.jsColor(style="background-color:rgb(0,122,255)")
-                    .color.jsColor(style="background-color:rgb(88,86,214)")
+        .container.mod0__container.hidden
+            div
+                span 제시어는 
+                span.word ㅇㅇㅇ
+                span 입니다.
+            form
+                input(placeholder="제시어를 입력 해주세요", type="text")
+            .submitWord.hidden
+                span 입력된 제시어는 
+                span.word ㅇㅇㅇ
+                span 입니다.
+        .container.mod1__container
+            div
+                span.word ㅇㅇㅇ
+                span 을(를) 그려주세요
+            .canvas__div
+                canvas
+                .canvas__controls
+                    button 초기화
+                    button(style="background-color:rgb(0, 0, 0)") 
+                    button(style="background-color:rgb(255,255,255)")
+                    button(style="background-color:rgb(255,59,48)")
+                    button(style="background-color:rgb(255,149,0)")
+                    button(style="background-color:rgb(255,204,0)")
+                    button(style="background-color:rgb(76,217,100)")
+                    button(style="background-color:rgb(90,200,250)")
+                    button(style="background-color:rgb(0,122,255)")
+                    button(style="background-color:rgb(88,86,214)")
+        .container.mod2__container.hidden mod2 - answer
         .canvas__btns
             button.canvas__btn__draw.hidden 그리기 시작(테스트)
-            button.canvas__btn__ready 준비
+            button.canvas__btn__next.hidden 완료
+            button.canvas__btn__ready 준비 
