--- a/src/views/mixins/mainContainer.pug
+++ b/src/views/mixins/mainContainer.pug
@@ -1,10 +1,8 @@
 include chatContainer
 include canvasContainer
 
-- var turn = 1;
-
-mixin mainContainer()
+mixin mainContainer
     .main__container.hidden
-        +canvasContainer(turn)
+        +canvasContainer
         +chatContainer
                            
