--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -69,74 +69,72 @@
                 box-shadow: inset 0 5px 5px gray;
             }
             .canvas__controls {
+                padding-left: 15%;
+                padding-right: 15%;
                 margin-top: 2rem;
-                .colors
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                button {
+                    height: 3.5rem;
+                    width: 3.5rem;
+                    border: none;
+                    border-radius: 5rem;
+                    transition: all ease-in-out 0.1s;
+                    &:hover {
+                        transform: scale(1.2);
+                    }
+                    &:focus {
+                        transform: scale(0.8);
+                    }
+                }
+                .btn__clear {
+                    font-size: 0.5rem;
+                }
+                .border {
+                    border: 1px gray solid;
+                }
             }
         }
     }
     .mod2__container {
-        background-color: rgb(44, 189, 68);
-    }
-    .main {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
-        #jsCanvas {
-            width: 700px;
-            height: 700px;
+        .canvas__div {
+            margin-top: 2rem;
+            width: 100%;
+            height: 75%;
+            canvas {
+                height: 100%;
+                width: 100%;
+                border: 1px rgb(129, 129, 129) solid;
+                border-radius: 2rem;
+                box-shadow: inset 0 5px 5px gray;
+            }
         }
-        .controls {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            .colors {
-                display: flex;
-                flex-direction: column;
-                &:hover .color {
-                    opacity: 0.95;
-                    transform: translateX(-3px);
-                }
-                .color {
-                    height: 50px;
-                    width: 50px;
-                    cursor: pointer;
-                    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11),
-                        0 1px 3px rgba(0, 0, 0, 0.08);
-                    border-radius: 25px;
-                    transition: opacity 0.1s linear, scale 0.1s linear,
-                        transform 0.1s linear;
-                    &:hover {
-                        opacity: 1;
-                        transform: scale(1.1);
-                        & ~ .color {
-                            transform: translateX(3px);
-                        }
-                    }
-                    &.selectedColor {
-                        box-shadow: none;
-                    }
-                }
+        input {
+            text-align: center;
+            margin-top: 20px;
+            width: 20rem;
+            padding: 10px;
+            border-radius: 50px !important;
+            box-shadow: 0 2px 4px rgba(50, 50, 93, 0.1),
+                0 10px 10px rgba(81, 87, 110, 0.16) !important;
+            border-radius: 5px;
+            font-size: 14px;
+            border: rgb(209, 209, 209) 4px solid;
+            outline: none;
+            transition: all ease-in-out 0.3s;
+            &:focus::placeholder {
+                visibility: hidden;
             }
-            button {
-                margin-left: 25px;
-                box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11),
-                    0 1px 3px rgba(0, 0, 0, 0.08);
-                border: 0px;
-                padding: 5px 7px;
-                min-width: 50px;
-
-                border-radius: 5px;
-                font-weight: 600;
-                border: 2px solid rgb(142, 142, 147);
-                color: rgb(142, 142, 147);
-                font-size: 14px;
-                cursor: pointer;
-                transition: transform 0.1s linear;
-                &:active {
-                    transform: scale(0.98);
-                }
-            }
+        }
+        .word {
+            font-size: 2.5rem;
+        }
+        .submitWord {
+            margin-top: 20px;
         }
     }
     .canvas__btns {
