리뷰 화면 작업

--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -41,7 +41,10 @@ mixin canvasContainer
                 span 입력된 제시어는 
                 span.word ㅇㅇㅇ
                 span 입니다.
+        .container.review__container.hidden
         .canvas__btns
             button.canvas__btn__draw.hidden 그리기 시작(테스트)
-            button.canvas__btn__next.hidden 완료
-            button.canvas__btn__ready 준비 
+            button.canvas__btn__submit.hidden 완료
+            button.canvas__btn__ready 준비
+            button.review__btn__prev.hidden 이전
+            button.review__btn__next.hidden 다음
