방장, 준비 아이콘 설정, 단어 제출 시 수정 가능하도록

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,3 +17,4 @@ html(lang="ko")
             window.events = !{events}
         script(src="/socket.io/socket.io.js")
         script(src="/js/main.js")
+        script(src="https://kit.fontawesome.com/e863981bbc.js" crossorigin="anonymous")
