--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -19,7 +19,7 @@ mixin canvasContainer
             div
                 span.word ㅇㅇㅇ
                 span 을(를) 그려주세요
-            .canvas__div 
+            .canvas__div
                 canvas
                 .canvas__controls
                     button.btn__clear.border 초기화
@@ -45,6 +45,7 @@ mixin canvasContainer
         .canvas__btns
             button.canvas__btn__draw.hidden 그리기 시작(테스트)
             button.canvas__btn__submit.hidden 완료
+            button.canvas__btn__modify.hidden 수정
             button.canvas__btn__ready 준비
             button.review__btn__prev.hidden 이전
             button.review__btn__next.hidden 다음
