--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -2,6 +2,7 @@
     height: 100%;
     width: 70%;
     padding: 2rem;
+    padding-top: 5rem;
     .canvas,
     .chatMessages {
         background-color: white;
@@ -12,7 +13,8 @@
     }
     .container {
         width: 100%;
-        height: 90%;
+        height: 45rem;
+        padding-top: 5rem;
         border-radius: 20px;
         box-shadow: 0 6px 6px gray;
         padding: 50px;
