--- a/assets/scss/chatContainer.scss
+++ b/assets/scss/chatContainer.scss
@@ -2,7 +2,7 @@
     height: 100%;
     width: 25%;
     .chat__players__div {
-        height: 7.5%;
+        height: 5rem;
         width: 100%;
         display: flex;
         align-items: flex-end;
@@ -12,7 +12,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            span {
+            i {
                 margin-right: -0.5rem;
             }
             div {
@@ -28,8 +28,10 @@
         }
     }
     .chat__list__div {
-        height: 92.5%;
+        height: 45rem;
         width: 100%;
+        border-radius: 20px;
+        box-shadow: 0 6px 6px gray;
         .chat__view__div {
             background-color: white;
             height: 95%;
