리뷰 컨트롤은 방장만 가능하도록, 방장 준비취소 오류 해결

--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -47,5 +47,6 @@ mixin canvasContainer
             button.canvas__btn__submit.hidden 완료
             button.canvas__btn__modify.hidden 수정
             button.canvas__btn__ready 준비
-            button.review__btn__prev.hidden 이전
-            button.review__btn__next.hidden 다음
+            button.review__btn__prev.hidden <
+            button.review__btn__next.hidden >
+            button.review__btn__exit.hidden 종료
