--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -1,5 +1,8 @@
 mixin canvasContainer
     .canvas__container
+        .canvas__timer.hidden
+            i.far.fa-hourglass
+            span 60
         .container.help__container
             p 텔레스트레이션
             p 설명이 들어간다
