--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -4,9 +4,12 @@ mixin canvasContainer
             i.far.fa-hourglass
             span 60
         .container.help__container
-            p 텔레스트레이션
-            p 설명이 들어간다
-            p 계속 들어간다
+            p 텔레스트레이션 게임 방법
+            p 1. 각 플레이어는 스케치북과 제시어를 받습니다.
+            p 2. 매 턴마다 스케치북을 다음 사람에게 넘기며 진행합니다. 
+            p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다. 
+            p 3-2. 그림을 전달 받은 경우, 그림에 맞는 제시어를 추측하여 입력합니다. 
+            p 4. 자신의 스케치북이 돌아올 때 게임은 종료되며 모두의 스케치북을 확인합니다. 
         .container.mod0__container.hidden
             div
                 span 제시어는 
