도움말 페이지 스타일 작업

--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -4,7 +4,8 @@ mixin canvasContainer
             i.far.fa-hourglass
             span 60
         .container.help__container
-            p 텔레스트레이션 게임 방법
+            div
+                span 텔레스트레이션 게임 방법
             p 1. 각 플레이어는 스케치북과 제시어를 받습니다.
             p 2. 매 턴마다 스케치북을 다음 사람에게 넘기며 진행합니다. 
             p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다. 
