--- a/assets/scss/chatContainer.scss
+++ b/assets/scss/chatContainer.scss
@@ -67,6 +67,9 @@
                 &:focus {
                     outline: none;
                 }
+                &:disabled {
+                    background-color: gray !important;
+                }
             }
         }
     }
