--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -28,7 +28,7 @@ mixin canvasContainer
             .canvas__div
                 canvas.canvas__draw
                 .canvas__controls
-                    button.btn__clear.border 초기화
+                    button.btn__clear.border 채우기
                     button(style="background-color:rgb(0, 0, 0)") 
                     button.border(style="background-color:rgb(255,255,255)")
                     button(style="background-color:rgb(255,59,48)") 
