--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,50 +12,49 @@
 @import "chatContainer";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: rgb(230, 230, 230) !important;
-    font-family: "Jua", "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-        sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100%;
-    .hidden {
-        display: none !important;
-    }
-    background-color: $greyColor;
-    font-family: "Jua", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100%;
-    // 로그인창, 게임창 둘 다 안보이게
+  background-color: rgb(230, 230, 230) !important;
+  font-family: "Jua", "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  .hidden {
+    display: none !important;
+  }
+  background-color: $greyColor;
+  font-family: "Jua", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100%;
+  // 로그인창, 게임창 둘 다 안보이게
+  .loginBox {
+    display: none;
+  }
+  //body의 className이 loggedOut이면
+  &.loggedOut {
     .loginBox {
-        display: none;
+      display: block;
     }
-    //body의 className이 loggedOut이면
-    &.loggedOut {
-        .loginBox {
-            display: block;
-        }
+  }
+  //body의 className이 loggedIn이면
+  &.loggedIn {
+    .gameContainer {
+      display: flex;
     }
-    //body의 className이 loggedIn이면
-    &.loggedIn {
-        .gameContainer {
-            display: flex;
-        }
-    }
+  }
 }
