--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -18,11 +18,11 @@
   height: 100%;
   width: 70%;
   padding: 2rem;
-  padding-top: 5rem;
+  padding-top: 1rem;
   .canvas__timer {
     position: absolute;
     right: 3rem;
-    top: 6rem;
+    top: 3rem;
     font-size: xx-large;
     color: gray;
     i {
@@ -43,7 +43,7 @@
     width: 100%;
     height: 45rem;
     padding: 2px;
-    padding-top: 5rem;
+    padding-top: 3.5rem;
     border-radius: 20px;
     box-shadow: 0 6px 6px gray;
     background-color: white;
@@ -104,7 +104,7 @@
       font-size: 2rem;
     }
     .canvas__div {
-      margin-top: 2rem;
+      margin-top: 10px;
       width: 100%;
       height: 75%;
       canvas {
@@ -149,6 +149,8 @@
         .clicked {
           transform: scale(1.2);
         }
+      }
+      .canvas__pen {
       }
     }
   }
@@ -200,6 +202,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 5rem;
     .review__spans {
       width: 100%;
       display: flex;
