--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -39,6 +39,8 @@ mixin canvasContainer
                     button(style="background-color:rgb(90,200,250)")
                     button(style="background-color:rgb(0,122,255)")
                     button(style="background-color:rgb(88,86,214)")
+                .canvas__pen
+                    input.range__width(type="range", min="1", max="10", value="2", step="1")
         .container.mod2__container.hidden
             .canvas__div
                 .canvas__show
@@ -57,3 +59,4 @@ mixin canvasContainer
             button.review__btn__prev.hidden <
             button.review__btn__next.hidden >
             button.review__btn__exit.hidden 종료
+            button.review__btn__download.hidden 다운로드
