--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -53,15 +53,32 @@
     padding-right: 10px;
     div {
       text-align: center;
-      margin-bottom: 5rem;
+      margin-bottom: 3rem;
       span {
         font-size: 4rem;
+        color: #e67e22;
       }
     }
     p {
       text-align: center;
       font-size: 1.5rem;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
+      color: #27ae60;
+    }
+    .patchNote {
+      padding-top: 0.5rem;
+      p {
+        text-align: center;
+        font-size: 1rem;
+        margin-bottom: 0.1rem;
+        color: grey;
+      }
+      .patch__version {
+        text-align: center;
+        font-size: 1.25rem;
+        margin-top: 1rem;
+        color: indianred;
+      }
     }
   }
   .mod0__container {
