--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -140,7 +140,7 @@
         // display: flex;
         display: block;
         white-space: nowrap;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
         button {
           // height: 3.5rem;
@@ -150,6 +150,7 @@
           border: none;
           border-radius: 20px;
           transition: all ease-in-out 0.1s;
+          font-family: "Jua";
           &:hover {
             transform: scale(1.25);
           }
@@ -158,7 +159,9 @@
           }
         }
         .btn__clear {
-          font-size: 0.5rem;
+          position: relative;
+          top: -12.5px;
+          font-size: 1rem;
         }
         .border {
           border: 1px gray solid;
@@ -166,8 +169,6 @@
         .clicked {
           transform: scale(1.2);
         }
-      }
-      .canvas__pen {
       }
     }
   }
