--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -11,17 +11,18 @@ mixin canvasContainer
             p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다. 
             p 3-2. 그림을 전달 받은 경우, 그림에 맞는 제시어를 추측하여 입력합니다. 
             p 4. 자신의 스케치북이 돌아올 때 게임은 종료되며 모두의 스케치북을 확인합니다. 
+            p.notice (모바일은 PC 버전 보기로 보시면 더 편안합니다)
             .patchNote
                 p.patch__version v1.1 패치노트 (210613)
                 p - 채우기 추가 (색 선택하고 채우기 누르면 채워짐)
                 p - 모바일 최적화 (캔버스를 정사각형으로 변경)
-                p.patch__version v1.2.2 패치노트 (210614)
+                p.patch__version v1.2.1 패치노트 (210614)
                 p - 4인 이상 플레이 시 1명 완전 자유 주제 (자유 주제 제외 수정 불가)
                 p - 리뷰 창에서 스케치북 주인 이름 색상 추가
                 p - 게임 턴의 방향이 정방향으로 바뀜(왼->오)
                 p - 버튼이 줄어드는 버그 수정
                 p - 턴 넘어갈 때 펜, 채우기 색 초기화
-                p.patch__version v1.3.1 패치노트 (210615)
+                p.patch__version v1.3.2 패치노트 (210615)
                 p - 펜 굵기 변경 추가 (1 ~ 10단계)
                 p - 리뷰 창에서 다운로드 기능 추가
                 p - 채우기 아이콘 불-편함 수정
