--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -63,7 +63,12 @@
       text-align: center;
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      color: #2c3e50;
+    }
+    .notice {
+      font-size: 1.25rem;
       color: #27ae60;
+      margin-bottom: 0rem;
     }
     .patchNote {
       padding-top: 0.5rem;
