--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -11,7 +11,7 @@ mixin canvasContainer
             p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다. 
             p 3-2. 그림을 전달 받은 경우, 그림에 맞는 제시어를 추측하여 입력합니다. 
             p 4. 자신의 스케치북이 돌아올 때 게임은 종료되며 모두의 스케치북을 확인합니다. 
-            p.notice (모바일은 PC 버전 보기로 보시면 더 편안합니다)
+            p.notice (모바일은 PC 버전 보기로 플레이하면 더 편안합니다)
             .patchNote
                 p.patch__version v1.1 패치노트 (210613)
                 p - 채우기 추가 (색 선택하고 채우기 누르면 채워짐)
