--- a/assets/scss/chatContainer.scss
+++ b/assets/scss/chatContainer.scss
@@ -1,76 +1,79 @@
 .chat__container {
-    height: 100%;
-    width: 25%;
-    .chat__players__div {
-        height: 5rem;
-        width: 100%;
+  height: 100%;
+  width: 25%;
+  .chat__players__div {
+    height: 5rem;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 1rem;
+    .players {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      i {
+        margin-right: -0.5rem;
+      }
+      div {
         display: flex;
-        align-items: flex-end;
-        padding-bottom: 1rem;
-        .players {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            i {
-                margin-right: -0.5rem;
-            }
-            div {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                height: 3rem;
-                width: 3rem;
-                background-color: red;
-                margin-right: -0.5rem;
-                border-radius: 50%;
-            }
-        }
+        align-items: center;
+        justify-content: center;
+        height: 3rem;
+        width: 3rem;
+        background-color: red;
+        margin-right: -0.5rem;
+        border-radius: 50%;
+      }
     }
-    .chat__list__div {
-        height: 45rem;
+  }
+  .chat__list__div {
+    height: 45rem;
+    width: 100%;
+    border-radius: 20px;
+    box-shadow: 0 6px 6px gray;
+    .chat__view__div {
+      background-color: white;
+      height: 95%;
+      width: 100%;
+      padding: 1rem;
+      border-radius: 20px 20px 0 0;
+      overflow: auto;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      .messages {
+        display: flex;
+        margin-bottom: 0.5rem;
+        span {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+    .chat__form {
+      height: 5%;
+      width: 100%;
+      input {
+        border-radius: 0 0 20px 20px;
+        padding: 1rem;
+        height: 100%;
         width: 100%;
-        border-radius: 20px;
-        box-shadow: 0 6px 6px gray;
-        .chat__view__div {
-            background-color: white;
-            height: 95%;
-            width: 100%;
-            padding: 1rem;
-            border-radius: 20px 20px 0 0;
-            overflow: auto;
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-            &::-webkit-scrollbar {
-                display: none;
-            }
-            .messages {
-                display: flex;
-                margin-bottom: 0.5rem;
-                span {
-                    margin-right: 0.5rem;
-                }
-            }
+        border: 0 white solid;
+        transition: all ease-in-out 0.3s;
+        &:hover {
         }
-        .chat__form {
-            height: 5%;
-            width: 100%;
-            input {
-                border-radius: 0 0 20px 20px;
-                padding: 1rem;
-                height: 100%;
-                width: 100%;
-                border: 0 white solid;
-                transition: all ease-in-out 0.3s;
-                &:hover {
-                }
-                &:focus {
-                    outline: none;
-                }
-                &:disabled {
-                    background-color: gray !important;
-                }
-            }
+        &:focus {
+          outline: none;
         }
+        &:disabled {
+          background-color: white !important;
+        }
+        &:enabled {
+          background-color: #ecf0f1 !important;
+        }
+      }
     }
+  }
 }
