--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -265,7 +265,7 @@
       border: none;
       // height: 100%;
       // width: 20rem;
-      margin-top: 30px;
+      // margin-top: 30px;
       margin-bottom: 5px;
       height: 40px;
       width: 320px;
