--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -26,6 +26,7 @@ mixin canvasContainer
                 p - 펜 굵기 변경 추가 (1 ~ 10단계)
                 p - 리뷰 창에서 다운로드 기능 추가
                 p - 채우기 아이콘 불-편함 수정
+                p - 게임 중 방장 아이콘 삭제
         .container.mod0__container.hidden
             div
                 span 제시어는 
