스크롤 수정

--- a/assets/scss/canvasContainer.scss
+++ b/assets/scss/canvasContainer.scss
@@ -51,7 +51,7 @@
   .help__container {
     padding-left: 10px;
     padding-right: 10px;
-    overflow: scroll;
+    overflow: auto;
     div {
       text-align: center;
       margin-bottom: 3rem;
