--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -7,10 +7,10 @@ mixin canvasContainer
             div
                 span 텔레스트레이션 게임 방법
             p 1. 각 플레이어는 스케치북과 제시어를 받습니다.
-            p 2. 매 턴마다 스케치북을 다음 사람에게 넘기며 진행합니다. 
-            p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다. 
-            p 3-2. 그림을 전달 받은 경우, 그림에 맞는 제시어를 추측하여 입력합니다. 
-            p 4. 자신의 스케치북이 돌아올 때 게임은 종료되며 모두의 스케치북을 확인합니다. 
+            p 2. 매 턴마다 스케치북을 다음 사람에게 넘기며 진행합니다.
+            p 3-1. 제시어를 전달 받은 경우, 제시어에 맞는 그림을 그립니다.
+            p 3-2. 그림을 전달 받은 경우, 그림에 맞는 제시어를 추측하여 입력합니다.
+            p 4. 자신의 스케치북이 돌아올 때 게임은 종료되며 모두의 스케치북을 확인합니다.
             p.notice (모바일은 PC 버전으로 플레이하면 더 편안합니다)
             .patchNote
                 p.patch__version v1.1 패치노트 (210613)
@@ -22,7 +22,7 @@ mixin canvasContainer
                 p - 게임 턴의 방향이 정방향으로 바뀜(왼->오)
                 p - 버튼이 줄어드는 버그 수정
                 p - 턴 넘어갈 때 펜, 채우기 색 초기화
-                p.patch__version v1.3.4 패치노트 (210615)
+                p.patch__version v1.3.5 패치노트 (210615-210616)
                 p - 펜 굵기 변경 추가 (1 ~ 10단계)
                 p - 리뷰 창에서 다운로드 기능 추가
                 p - 채우기 아이콘 불-편함 수정
