--- a/src/views/mixins/canvasContainer.pug
+++ b/src/views/mixins/canvasContainer.pug
@@ -22,11 +22,12 @@ mixin canvasContainer
                 p - 게임 턴의 방향이 정방향으로 바뀜(왼->오)
                 p - 버튼이 줄어드는 버그 수정
                 p - 턴 넘어갈 때 펜, 채우기 색 초기화
-                p.patch__version v1.3.5 패치노트 (210615-210616)
+                p.patch__version v1.3.6 패치노트 (210615-210617)
                 p - 펜 굵기 변경 추가 (1 ~ 10단계)
                 p - 리뷰 창에서 다운로드 기능 추가
                 p - 채우기 아이콘 불-편함 수정
                 p - 게임 중 방장 아이콘 삭제
+                p - 채팅창 명령어 추가(!명령어 쳐보기)
         .container.mod0__container.hidden
             div
                 span 제시어는 
